src/components/_project/project-description.module.scss
@import '../../base/module';

.ProjectDescription {
  background-color: $color-dove;
  padding-top: 20px;
  padding-bottom: 0px;
  .galleryWrap {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 40px;
    @media (min-width: $desktop) {
      flex-direction: row;
    }
    img {
      border: 10px solid $color-white;
      @media (min-width: $desktop) {
        height: 550px;
      }
    }
  }
  .Content {
    max-width: 1200px;
    margin: 0px auto;
  }

  .copyWrap {
    padding: 50px 0px;
  }
}

